--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/node-cron": "^3.0.1",
     "micro": "^9.3.4",
     "node-cron": "^3.0.0",
+    "node-fetch": "^2.6.6",
     "puppeteer": "^13.6.0",
     "serve-handler": "^6.1.3",
     "typescript": "^4.6.3"
@@ -15,6 +16,7 @@
   "version": "1.0.0",
   "main": "./dist/index.js",
   "devDependencies": {
+    "@types/node-fetch": "^2.6.1",
     "@types/serve-handler": "^6.1.1"
   },
   "scripts": {
