--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "micro": "^9.3.4",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.6",
+    "ps-node-promise-es6": "^0.0.1",
     "puppeteer": "^13.6.0",
     "serve-handler": "^6.1.3",
     "typescript": "^4.6.3"
